--- a/paper/references.bib
+++ b/paper/references.bib
@@ -178,4 +178,15 @@
   note         = {Accessed: 2024-11-27}
 }
 
+  @Article{ms,
+    title = {{modelsummary}: Data and Model Summaries in {R}},
+    author = {Vincent Arel-Bundock},
+    journal = {Journal of Statistical Software},
+    year = {2022},
+    volume = {103},
+    number = {1},
+    pages = {1--23},
+    doi = {10.18637/jss.v103.i01},
+  }
+
 
